test/spec_vectors/simd_f64x2/fail/module_2.wat
(module (func (result v128) (f64x2.min (i32.const 0) (f32.const 0.0))))